--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,9 @@ node_modules/
 ## Release files
 release
 *.zip
+
+# AI_INSTRUCTIONS.md
+AI_INSTRUCTIONS.md
+
+# COPILOT_INSTRUCTIONS.md
+COPILOT_INSTRUCTIONS.md
